# football-predictor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml
.atl/: skill-registry.md
application/: __init__.py  backtesting.py  compute_stats.py  fetch_and_store.py  predict_match.py  train_model.py  world_cup_calibration.py
data/: world_cup_fixtures.json
domain/: __init__.py  entities.py  repositories.py  services.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AnalyticsDashboard.tsx  Callout.tsx  GeminiCard.tsx  MatchBar.tsx  MonteCarloCard.tsx  Tooltip.tsx  TrainingPanel.tsx  WorldCupPanel.tsx
frontend/src/components/ui/: Tooltip.tsx
frontend/src/hooks/: usePrediction.ts
frontend/src/lib/: api.ts
infrastructure/: __init__.py  config.py  container.py  logging.py  scheduler.py
infrastructure/api_clients/: __init__.py  football_data_client.py
infrastructure/ml/: calibration.py  ensemble.py  feature_engineering.py  llm_orchestrator.py  model_store_impl.py  signal_nodes.py  xgboost_model.py
infrastructure/repositories/: sqlite_match_repo.py  sqlite_prediction_repo.py  sqlite_stats_repo.py  sqlite_wc_results_repo.py
interface/: __init__.py  api.py  cli.py  dashboard.html  world_cup_api.py
tests/integration/: test_pipeline.py
tests/unit/: test_elo_calculator.py
